[gd_scene load_steps=5 format=3 uid="uid://buhnahgb68egf"]

[ext_resource type="Script" path="res://spaceshoot/player/Player.gd" id="1_2gi33"]
[ext_resource type="Texture2D" uid="uid://b2vqcwewmq0hv" path="res://spaceshoot/player/assets/characterHp.svg" id="2_yii2k"]
[ext_resource type="Texture2D" uid="uid://dr0owrk6vw1bo" path="res://spaceshoot/player/assets/characterOutline.svg" id="3_tpv7c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ougu"]
radius = 59.0339

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_2gi33")

[node name="characterHp" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_yii2k")

[node name="characterOutline" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_tpv7c")

[node name="playerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ougu")

[node name="shootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(80, 0)

[node name="score" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -81.0
offset_top = -102.0
offset_right = -39.0
offset_bottom = -76.0
text = "score"

[node name="regenCooldown" type="Timer" parent="."]
one_shot = true

[node name="chargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="regenCooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="chargeTimer" to="." method="_on_charge_timer_timeout"]
